adward/loadbalancer-lima.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard
  namespace: adguard
spec:
  type: NodePort
  # OPCIONAL: Pide la primera IP del rango definido en el pool (ej. 192.168.1.240)
  selector:
    app: adguard-home
  # OPCIONAL: Pide la primera IP del rango definido en el pool (ej. 192.168.1.240)
  ports:
    # Puerto DNS (Consultas)
    - name: dns-udp
      protocol: UDP
      port: 53
      targetPort: 53
      nodePort: 30053        # <- fijo, dentro del rango 30000–32767
    # Puerto de la Interfaz Web (Panel de Control)
    - name: web-tcp
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080        # <- fijo para acceso web
